# agent_workbench

./: .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  alembic.ini  expected_requirements.txt  mypy.ini  pyproject.toml  task_progress.md  test-deploy.sh  test_adaptive_db.py  test_gradio_standalone.py  test_gradio_unified.py  test_startup.py
.claude/docs/: api-endpoints.md  database-architecture.md  development-patterns.md  domain-objects.md  gradio-fastapi-pattern.md  pr-guidelines.md  workflow-architecture.md
.clinerules/: agent_workbench-rules.md  byterover-rules.md
.github/workflows/: ci-tests.yml  deploy-hf-spaces.yml
alembic/: env.py
alembic/versions/: 9e8468ee24fe_add_user_authentication_tables.py  aa6f9db26736_initial_schema.py  bbcc45c43561_add_documents_tables.py  ca1c1d0b76c0_add_missing_conversation_states_table.py  e7a9448109ae_add_llm_001c_consolidated_dual_mode_.py
config/: development.env
deploy/: deploy-manual.sh  deploy-production.sh  deploy-staging.sh
docs/: FUNCTIONAL_ARCHITECTURE_SCAN.md  HUMAN_STEERED_WORKFLOW.md  PHASE1_CLEANUP_PLAN.md  PRD-old.md  PRD.md  PWA-deployment.md  PYDANTIC_IMPLEMENTATION_AUDIT.md  Product Requirements Document.md  TEST_RECOMMENDATIONS.md  UI-001-target-ux.md  agent_workbench.sh  backend-remediation.md  code_quality_checks.md  devops.md  git-workflow.md  hotfix_litellm_hf.md  index.html  skills.md
docs/architecture/: logging_errors_strategy.md
docs/implementation/: Ast_scan_src_test_25092025.md  PROD-002-implementation-summary.md  UI-005-phase2-implementation-summary.md
docs/phase1/: AGENTIC_SYSTEM_OBJECT_MODEL.md  CLEANUP_ROADMAP.md  GRADIO_MOUNTING_DEBUG.md  GRADIO_STANDARDIZATION_COMPLETE.md  GRADIO_STANDARDIZATION_PLAN.md  PHASE_1_IMPLEMENTATION.md  hotfix_litellm_hf.md
docs/phase2/: Feat-dev-plan-chat-history-in-sidebar-in-chatpage.md  phase2_architecture_plan.md  phase2_phase1_alignment_analysis.md  phase2_testing_strategy.md  state_management_critical_pattern.md
docs/project/: ARCHITECTURE.md  BACKLOG.md  BUSINESS.md  DEPLOYMENT.md  PR-08b-Gradio6-upgrade.md  PR-08c-LangChain-v1-upgrade.md  PR-11-critical-missing-tests.md  PR-20-agent-core.md  PR-21-file-ui.md  PR-22-file-processing.md  PR-22b-standard-content-blocks.md  PR-23-content-retriever.md  PR-23-react-agent-subgraph.md  PR-24-content-retriever.md  PR-bacend-assessment-gradio.md  PR-backend-assessment-fastapi-db.md  PR-backend-assessment-gradio.md  PR-backend-assessment-test.md  PR-backend-cleanup-plan.md  PR-backend-pydantic-langchain.md  PR-cleanup-01-e501-fix.md  PR-cleanup-02-dead-tests.md  PR-cleanup-03-smoke-tests.md  PR-cleanup-04-dead-ui.md  PR-cleanup-05-dead-routes.md  PR-cleanup-06-dead-services.md  PR-cleanup-07-dead-models.md  PR-cleanup-08-bug-fixes.md  PR-cleanup-09-externalize-js.md  PR-cleanup-10-css-split.md  assessment-cleanup-plan.md  assessment-fastapi-db.md  assessment-gradio.md  assessment-pydantic-langchain.md  (+1 more)
scripts/: ui_building_analyzer.py
tests/: conftest.py  test_health.py
(+257 files in other folders)
