[project]
name = "agent-workbench"
version = "0.1.0"
description = "Agent Workbench - PRD-driven development"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "gradio>=6.0.0",
    "pydantic>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.29.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-ollama>=0.1.0",
    "langchain-mistralai>=0.1.0",
    "langchain-anthropic>=0.1.0",
    "openai>=1.6.0",
    "anthropic>=0.8.0",
    "mistralai>=1.0.0",
    "ollama>=0.3.0",
    "httpx>=0.25.0",
    "tenacity>=8.2.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "email-validator>=2.1.0",
    "structlog>=23.2.0",
    "langchain-google-genai>=2.1.12",
    "toml>=0.10.2",
    "datasets>=2.14.0",
    "huggingface-hub>=0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.9.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
lint.select = ["E", "W", "F", "I"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true  # Enforce strict typing
check_untyped_defs = true    # Check bodies of untyped functions
disallow_incomplete_defs = true  # Require all args to be typed
disallow_untyped_calls = false  # Allow calling untyped functions (gradual migration)
warn_redundant_casts = true
warn_unused_ignores = true
strict_optional = true
no_implicit_reexport = true
ignore_missing_imports = true  # Keep for external dependencies
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "types-requests>=2.32.4.20250913",
]
